--- a/gb/1/1/29/n40626.md
+++ b/gb/1/1/29/n40626.md
@@ -8,61 +8,56 @@
 <p>新华社供晚报专电说，马占华任县委组织部副部长前，曾当过县人事局局长。1996年，马占华把年仅14岁的儿子马明杰虚报成16岁，编造初中毕业学历，虚开“在县人事局工作过两年”的“工龄”证明，先将儿子“招收”为劳动合同制工人，1997年录用为国家干部，同年，调县工商局工作。初中都未读过的马明杰未到县工商局上过一天班，一直在西北民族学院汉语系带薪上学。</p>
 <p>马占祥也借哥哥马占华的光，从农民身份摇身一变，成了“国家干部”。马占华为弟弟采取的办法也是造假虚报，不过是把弟弟的年龄虚报小了，在假档案中将实际年龄31岁填成22岁；编造了初、高中毕业学历，档案中虚填了“在县饮食服务公司工作过”的“简历”。1996年3月15日，马占祥被“招收”为劳动合同制工人，6月7日，被“录用”为国家干部，17日，被批转为城镇户口。马占祥也被安排到县工商局工作。</p>
 <p>广河县委书记马方说，去年下半年，在全县开展的干部人事纪律作风整顿工作中，马占华的违纪行为被群众举报出来。目前，马明杰和马占祥两人已被当地工商部门除名。</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40583 target=_blank class=ltnn>反核民众自焚抗议 政院呼吁民众回归理性 </a> (1/29/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=40514 target=_blank class=ltnn>疫情再扩大 &#8211; 花莲新增1名汉他病毒病例　</a> (1/29/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=39544 target=_blank class=ltnn>美国联邦储备局局长暗示支持减税</a> (1/26/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=39517 target=_blank class=ltnn>《香港了望》高官落泪</a> (1/26/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=38955 target=_blank class=ltnn>甲A“调整”款款走来 中国足球迎来第二春</a> (1/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=38916 target=_blank class=ltnn>公安局长智毙持枪绑匪 </a> (1/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=38240 target=_blank class=ltnn>蔡英文在美演说: 无法接受中共片面解释的一中原则 </a> (1/22/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=38116 target=_blank class=ltnn>足协换岗有心无力</a> (1/22/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=38091 target=_blank class=ltnn>开放两个多月 大陆记者畏惧到台湾采访 </a> (1/22/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=37818 target=_blank class=ltnn>谢长廷今天会见日反核团体 </a> (1/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=37685 target=_blank class=ltnn>山东泗水一县长贪公款190万 </a> (1/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=37627 target=_blank class=ltnn>李富荣无意中泄中国足坛的底</a> (1/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=37588 target=_blank class=ltnn>克林顿卸任前夕 特赦一百三十人</a> (1/21/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=37488 target=_blank class=ltnn>台驻港事务局长张良任年后走马上任 </a> (1/20/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=37165 target=_blank class=ltnn>“１４４小时便利签证”使七万多外国游客得方便 </a> (1/19/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=37164 target=_blank class=ltnn>二000年“香港十大名牌”:斧头牌, 鳄鱼恤, 鹰牌等当选</a> (1/19/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=37111 target=_blank class=ltnn>财政司长曾荫权将率香港商界考察大西北 </a> (1/19/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=36747 target=_blank class=ltnn>李富荣点中足球四大死穴</a> (1/18/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=36707 target=_blank class=ltnn>大陆局势不稳 司法部长呼吁确保全国各监狱</a> (1/18/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=36410 target=_blank class=ltnn>中央电视台网站：孙明扬是接任政务司司长的“黑马”</a> (1/18/2001)<br />
+</p>
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40583" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">反核民众自焚抗议 政院呼吁民众回归理性 </a> (1/29/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=40514" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">疫情再扩大 &#8211; 花莲新增1名汉他病毒病例　</a> (1/29/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=39544" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美国联邦储备局局长暗示支持减税</a> (1/26/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=39517" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">《香港了望》高官落泪</a> (1/26/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38955" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">甲A“调整”款款走来 中国足球迎来第二春</a> (1/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38916" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">公安局长智毙持枪绑匪 </a> (1/24/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38240" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">蔡英文在美演说: 无法接受中共片面解释的一中原则 </a> (1/22/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38116" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">足协换岗有心无力</a> (1/22/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=38091" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">开放两个多月 大陆记者畏惧到台湾采访 </a> (1/22/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37818" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">谢长廷今天会见日反核团体 </a> (1/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37685" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">山东泗水一县长贪公款190万 </a> (1/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37627" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">李富荣无意中泄中国足坛的底</a> (1/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37588" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">克林顿卸任前夕 特赦一百三十人</a> (1/21/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37488" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台驻港事务局长张良任年后走马上任 </a> (1/20/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37165" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">“１４４小时便利签证”使七万多外国游客得方便 </a> (1/19/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37164" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">二000年“香港十大名牌”:斧头牌, 鳄鱼恤, 鹰牌等当选</a> (1/19/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=37111" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">财政司长曾荫权将率香港商界考察大西北 </a> (1/19/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36747" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">李富荣点中足球四大死穴</a> (1/18/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36707" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">大陆局势不稳 司法部长呼吁确保全国各监狱</a> (1/18/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36410" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">中央电视台网站：孙明扬是接任政务司司长的“黑马”</a> (1/18/2001)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/25/n10088158.md#1" target="_blank">林辉：民国长春市长厚颜事共 文革差点被打死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/9/14/n8301021.md#1" target="_blank">周向阳案辩词：为捍卫法律正义与真善忍而辩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/22/n11133337.md#1" target="_blank">林辉：质疑文革 红卫兵头目被摘肾暴尸</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520972.md#1">【古道人生】好心帮人为何死后遭“雷劈”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536779.md#1">夜奔七百里闯敌营 看奇女子如何报恩还业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549334.md#1">【时事金扫描】乌克兰抓获中共父子间谍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548988.md#1">【直播】NASA新闻发布会：SpaceX Crew-11任务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548923.md#1">【佳音时刻】川普警告习：敢动台湾必毁北京</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547473.md#1">神韵要求法庭撤销“毫无根据”的诉讼案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547530.md#1">资不抵债 大陆合资企业广汽菲克宣告破产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547402.md#1">“0元购”外卖爆单 阿里与美团顶风内卷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14546820.md#1">陆剧上半年十大最具影响力角色出炉 孙俪称冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547512.md#1">汤唯携9岁女儿现身机场 请求网友别拍到小孩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546802.md#1">女粉丝带男友看演唱会 鹿晗温暖喊话现场嗨翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547527.md#1">王嘉尔自曝曾借巨款给好友 再联系方知被骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547823.md#1">吃西瓜前加上这一物 就不会变得湿软难吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547034.md#1">美国114岁女人瑞分享长寿秘诀：吃一种食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548571.md#1">很多人的休假方式都错了？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544778.md#1">步行：治疗7种常见病痛的有效方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542664.md#1">心脏与大脑会记下每一个愤怒的时刻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/1/29/n40626.htm">人事局长将儿子和弟弟弄成了国家干部</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/1/29/n40626.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
